[gd_scene load_steps=51 format=3 uid="uid://dv2k1b58tyqlm"]

[ext_resource type="Script" path="res://Animals/bunny_animal.gd" id="1_0eipr"]
[ext_resource type="Texture2D" uid="uid://bc1s3ttotvya7" path="res://Art/Characters/bunny_spritesheet.png" id="2_bmxa0"]
[ext_resource type="PackedScene" uid="uid://ctggfbsut8k21" path="res://Animals/state_machine.tscn" id="3_7frag"]
[ext_resource type="Texture2D" uid="uid://bn18cbvegmgia" path="res://Art/Characters/shadow_5.png" id="3_lkqot"]
[ext_resource type="Script" path="res://Animals/Idle.gd" id="4_6xxcv"]
[ext_resource type="Script" path="res://Animals/Wander.gd" id="4_elqrw"]
[ext_resource type="Script" path="res://Animals/Eat.gd" id="5_woyk2"]
[ext_resource type="PackedScene" uid="uid://b8nmcmkphcitd" path="res://Items/carrot.tscn" id="6_a5rfm"]
[ext_resource type="Script" path="res://Animals/InspectComponent.gd" id="9_nks0h"]
[ext_resource type="Script" path="res://Animals/InformationComponent.gd" id="10_nft0t"]
[ext_resource type="PackedScene" uid="uid://d15mtjry83vr1" path="res://Items/lettuce.tscn" id="11_fud8m"]

[sub_resource type="Animation" id="Animation_3dk28"]
resource_name = "Eat_Left"
length = 0.3
loop_mode = 1

[sub_resource type="Animation" id="Animation_iy1gi"]
resource_name = "Eat_Right"
length = 0.3
loop_mode = 1

[sub_resource type="Animation" id="Animation_4n4ax"]
resource_name = "Idle_Down"
length = 2.0
loop_mode = 1

[sub_resource type="Animation" id="Animation_7qdkr"]
resource_name = "Idle_Left"
loop_mode = 1

[sub_resource type="Animation" id="Animation_72jka"]
resource_name = "Idle_Right"
loop_mode = 1

[sub_resource type="Animation" id="Animation_wn3bm"]
resource_name = "Idle_Up"
length = 2.0
loop_mode = 1

[sub_resource type="Animation" id="Animation_vyx5g"]
length = 0.001

[sub_resource type="Animation" id="Animation_lea8e"]
resource_name = "Walk_Down"
length = 0.5
loop_mode = 1

[sub_resource type="Animation" id="Animation_nx7kp"]
resource_name = "Walk_Left"
length = 0.5
loop_mode = 1

[sub_resource type="Animation" id="Animation_msdrc"]
resource_name = "Walk_Right"
length = 0.5
loop_mode = 1

[sub_resource type="Animation" id="Animation_6y8x3"]
resource_name = "Walk_Up"
length = 0.5
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i4107"]
_data = {
"Eat_Left": SubResource("Animation_3dk28"),
"Eat_Right": SubResource("Animation_iy1gi"),
"Idle_Down": SubResource("Animation_4n4ax"),
"Idle_Left": SubResource("Animation_7qdkr"),
"Idle_Right": SubResource("Animation_72jka"),
"Idle_Up": SubResource("Animation_wn3bm"),
"RESET": SubResource("Animation_vyx5g"),
"Walk_Down": SubResource("Animation_lea8e"),
"Walk_Left": SubResource("Animation_nx7kp"),
"Walk_Right": SubResource("Animation_msdrc"),
"Walk_Up": SubResource("Animation_6y8x3")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_2b6ux"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e5034"]
atlas = ExtResource("2_bmxa0")
region = Rect2(0, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gp4s"]
atlas = ExtResource("2_bmxa0")
region = Rect2(16, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibetn"]
atlas = ExtResource("2_bmxa0")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7dmu"]
atlas = ExtResource("2_bmxa0")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxg7k"]
atlas = ExtResource("2_bmxa0")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_75cne"]
atlas = ExtResource("2_bmxa0")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_23io1"]
atlas = ExtResource("2_bmxa0")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvcpd"]
atlas = ExtResource("2_bmxa0")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yidw2"]
atlas = ExtResource("2_bmxa0")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpnp6"]
atlas = ExtResource("2_bmxa0")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6mvd"]
atlas = ExtResource("2_bmxa0")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5i4ng"]
atlas = ExtResource("2_bmxa0")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbvol"]
atlas = ExtResource("2_bmxa0")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oohx8"]
atlas = ExtResource("2_bmxa0")
region = Rect2(0, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4pn3"]
atlas = ExtResource("2_bmxa0")
region = Rect2(16, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmjr3"]
atlas = ExtResource("2_bmxa0")
region = Rect2(32, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jmar"]
atlas = ExtResource("2_bmxa0")
region = Rect2(48, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hnoe"]
atlas = ExtResource("2_bmxa0")
region = Rect2(0, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xovf"]
atlas = ExtResource("2_bmxa0")
region = Rect2(16, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4la7"]
atlas = ExtResource("2_bmxa0")
region = Rect2(32, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_50xw6"]
atlas = ExtResource("2_bmxa0")
region = Rect2(48, 112, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_chryk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5034")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gp4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5034")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gp4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5034")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gp4s")
}],
"loop": false,
"name": &"eat",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibetn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7dmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxg7k")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_75cne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23io1")
}],
"loop": true,
"name": &"idle_down",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvcpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yidw2")
}],
"loop": true,
"name": &"idle_up",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpnp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6mvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5i4ng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbvol")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oohx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4pn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmjr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jmar")
}],
"loop": true,
"name": &"walk_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hnoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xovf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4la7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50xw6")
}],
"loop": true,
"name": &"walk_up",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0f3fu"]
radius = 49.0102

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ealp0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_swtil"]
radius = 87.0

[sub_resource type="Gradient" id="Gradient_yjydx"]
offsets = PackedFloat32Array(0, 0.21164, 0.804233)
colors = PackedColorArray(1, 1, 1, 1, 0.0141094, 0.0141094, 0.0141094, 0.0141094, 0, 0, 0, 0)

[node name="bunny" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_0eipr")
move_speed = 20.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i4107")
}

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_layers = 1025
avoidance_mask = 1025
debug_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 12)
shape = SubResource("CircleShape2D_2b6ux")

[node name="shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.0392157)
position = Vector2(-8, 10)
texture = ExtResource("3_lkqot")
centered = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 12)
sprite_frames = SubResource("SpriteFrames_chryk")
animation = &"eat"
frame = 5
frame_progress = 1.0

[node name="InteractArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(0, 12)
shape = SubResource("CircleShape2D_0f3fu")

[node name="MouseArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseArea"]
position = Vector2(0, 12)
shape = SubResource("RectangleShape2D_ealp0")

[node name="FoodDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FoodDetection"]
position = Vector2(0, 12)
shape = SubResource("CircleShape2D_swtil")

[node name="StateMachine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("3_7frag")]
initial_state = NodePath("Idle")
chance_idle = 5.0

[node name="Wander" type="Node" parent="StateMachine" node_paths=PackedStringArray("animal")]
script = ExtResource("4_elqrw")
animal = NodePath("../..")
favorite_food_scene = ExtResource("6_a5rfm")
wander_duration = 4

[node name="Eat" type="Node" parent="StateMachine" node_paths=PackedStringArray("animal")]
script = ExtResource("5_woyk2")
favorite_food_scene = ExtResource("6_a5rfm")
animal = NodePath("../..")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("animal")]
script = ExtResource("4_6xxcv")
animal = NodePath("../..")
idle_duration = 10

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
modulate = Color(1, 1, 1, 0.392157)
position = Vector2(-6, 17)
emitting = false
amount = 10
one_shot = true
explosiveness = 0.42
emission_shape = 1
emission_sphere_radius = 3.37
direction = Vector2(1, 50)
spread = 75.41
gravity = Vector2(-50, 400)
scale_amount_max = 2.0
color = Color(1, 0.74902, 0.545098, 1)
color_ramp = SubResource("Gradient_yjydx")

[node name="InspectComponent" type="Node2D" parent="."]
script = ExtResource("9_nks0h")

[node name="InformationComponent" type="Node2D" parent="."]
script = ExtResource("10_nft0t")
description = "A cute bunny rabbit that has a knack for carrots and grass"
requirement_item_1 = ExtResource("6_a5rfm")
requirement_item_2 = ExtResource("11_fud8m")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="InteractArea" to="InspectComponent" method="_on_interact_area_body_entered"]
[connection signal="body_exited" from="InteractArea" to="InspectComponent" method="_on_interact_area_body_exited"]
[connection signal="mouse_entered" from="MouseArea" to="InspectComponent" method="_on_mouse_area_mouse_entered"]
[connection signal="mouse_exited" from="MouseArea" to="InspectComponent" method="_on_mouse_area_mouse_exited"]
[connection signal="body_entered" from="FoodDetection" to="StateMachine/Wander" method="_on_food_detection_body_entered"]
